--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 
   <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
   <script src="https://apis.google.com/js/api.js"></script>
-    <script src="app.js"></script>
+    <script src="app1.js"></script>
 </body>
 </html>
